syntax = "proto3";

option csharp_namespace = "WarzoneFanout.Grpc.Server";

package greet;

service Stats {
  rpc GetStats (StatsRequest) returns (StatsResponse);
}

enum GameType
{
    Multiplayer = 0;
    BattleRoyal = 1;
}

message StatsRequest {
  string username = 1;
  GameType gameType = 2;
}

message StatsResponse {
  int32 totalKills = 1;
  int32 totalDeaths = 2;
  int32 score = 3;
  int32 matchesPlayed = 4;
}
